browser/extensions/activity-stream/data/content/activity-stream.css
charset
"
UTF
-
8
"
;
html
{
box
-
sizing
:
border
-
box
;
}
*
*
:
:
before
*
:
:
after
{
box
-
sizing
:
inherit
;
}
*
:
:
-
moz
-
focus
-
inner
{
border
:
0
;
}
body
{
margin
:
0
;
}
button
input
{
font
-
family
:
inherit
;
font
-
size
:
inherit
;
}
[
hidden
]
{
display
:
none
!
important
;
}
.
icon
{
display
:
inline
-
block
;
width
:
16px
;
height
:
16px
;
background
-
size
:
16px
;
background
-
position
:
center
center
;
background
-
repeat
:
no
-
repeat
;
vertical
-
align
:
middle
;
fill
:
rgba
(
12
12
13
0
.
8
)
;
-
moz
-
context
-
properties
:
fill
;
}
.
icon
.
icon
-
spacer
{
margin
-
inline
-
end
:
8px
;
}
.
icon
.
icon
-
small
-
spacer
{
margin
-
inline
-
end
:
6px
;
}
.
icon
.
icon
-
bookmark
-
added
{
background
-
image
:
url
(
"
chrome
:
/
/
browser
/
skin
/
bookmark
.
svg
"
)
;
}
.
icon
.
icon
-
bookmark
-
hollow
{
background
-
image
:
url
(
"
chrome
:
/
/
browser
/
skin
/
bookmark
-
hollow
.
svg
"
)
;
}
.
icon
.
icon
-
delete
{
background
-
image
:
url
(
"
assets
/
glyph
-
delete
-
16
.
svg
"
)
;
}
.
icon
.
icon
-
dismiss
{
background
-
image
:
url
(
"
assets
/
glyph
-
dismiss
-
16
.
svg
"
)
;
}
.
icon
.
icon
-
info
{
background
-
image
:
url
(
"
assets
/
glyph
-
info
-
16
.
svg
"
)
;
}
.
icon
.
icon
-
import
{
background
-
image
:
url
(
"
assets
/
glyph
-
import
-
16
.
svg
"
)
;
}
.
icon
.
icon
-
new
-
window
{
background
-
image
:
url
(
"
assets
/
glyph
-
newWindow
-
16
.
svg
"
)
;
}
.
icon
.
icon
-
new
-
window
-
private
{
background
-
image
:
url
(
"
chrome
:
/
/
browser
/
skin
/
privateBrowsing
.
svg
"
)
;
}
.
icon
.
icon
-
settings
{
background
-
image
:
url
(
"
assets
/
glyph
-
settings
-
16
.
svg
"
)
;
}
.
icon
.
icon
-
pin
{
background
-
image
:
url
(
"
assets
/
glyph
-
pin
-
16
.
svg
"
)
;
}
.
icon
.
icon
-
unpin
{
background
-
image
:
url
(
"
assets
/
glyph
-
unpin
-
16
.
svg
"
)
;
}
.
icon
.
icon
-
edit
{
background
-
image
:
url
(
"
assets
/
glyph
-
edit
-
16
.
svg
"
)
;
}
.
icon
.
icon
-
pocket
{
background
-
image
:
url
(
"
assets
/
glyph
-
pocket
-
16
.
svg
"
)
;
}
.
icon
.
icon
-
historyItem
{
background
-
image
:
url
(
"
assets
/
glyph
-
historyItem
-
16
.
svg
"
)
;
}
.
icon
.
icon
-
trending
{
background
-
image
:
url
(
"
assets
/
glyph
-
trending
-
16
.
svg
"
)
;
transform
:
translateY
(
2px
)
;
}
.
icon
.
icon
-
now
{
background
-
image
:
url
(
"
chrome
:
/
/
browser
/
skin
/
history
.
svg
"
)
;
}
.
icon
.
icon
-
topsites
{
background
-
image
:
url
(
"
assets
/
glyph
-
topsites
-
16
.
svg
"
)
;
}
.
icon
.
icon
-
pin
-
small
{
background
-
image
:
url
(
"
assets
/
glyph
-
pin
-
12
.
svg
"
)
;
background
-
size
:
12px
;
height
:
12px
;
width
:
12px
;
}
.
icon
.
icon
-
check
{
background
-
image
:
url
(
"
chrome
:
/
/
browser
/
skin
/
check
.
svg
"
)
;
}
.
icon
.
icon
-
webextension
{
background
-
image
:
url
(
"
assets
/
glyph
-
webextension
-
16
.
svg
"
)
;
}
.
icon
.
icon
-
highlights
{
background
-
image
:
url
(
"
assets
/
glyph
-
highlights
-
16
.
svg
"
)
;
}
html
body
#
root
{
height
:
100
%
;
}
body
{
background
:
#
F9F9FA
;
color
:
#
0C0C0D
;
font
-
family
:
-
apple
-
system
BlinkMacSystemFont
'
Segoe
UI
'
'
Ubuntu
'
'
Helvetica
Neue
'
sans
-
serif
;
font
-
size
:
16px
;
}
h1
h2
{
font
-
weight
:
normal
;
}
a
{
color
:
#
0060DF
;
text
-
decoration
:
none
;
}
a
:
hover
{
color
:
#
008EA4
;
}
.
sr
-
only
{
position
:
absolute
;
width
:
1px
;
height
:
1px
;
padding
:
0
;
margin
:
-
1px
;
overflow
:
hidden
;
clip
:
rect
(
0
0
0
0
)
;
border
:
0
;
}
.
inner
-
border
{
border
:
1px
solid
#
D7D7DB
;
border
-
radius
:
3px
;
position
:
absolute
;
top
:
0
;
left
:
0
;
width
:
100
%
;
height
:
100
%
;
pointer
-
events
:
none
;
z
-
index
:
100
;
}
keyframes
fadeIn
{
from
{
opacity
:
0
;
}
to
{
opacity
:
1
;
}
}
.
show
-
on
-
init
{
opacity
:
0
;
transition
:
opacity
0
.
2s
ease
-
in
;
}
.
show
-
on
-
init
.
on
{
opacity
:
1
;
animation
:
fadeIn
0
.
2s
;
}
.
actions
{
border
-
top
:
1px
solid
#
D7D7DB
;
display
:
flex
;
flex
-
direction
:
row
;
margin
:
0
;
padding
:
15px
25px
;
justify
-
content
:
flex
-
start
;
}
.
actions
button
{
background
:
#
F9F9FA
;
border
:
1px
solid
#
B1B1B3
;
border
-
radius
:
4px
;
color
:
inherit
;
cursor
:
pointer
;
padding
:
10px
30px
;
white
-
space
:
nowrap
;
}
.
actions
button
:
hover
:
not
(
.
dismiss
)
{
box
-
shadow
:
0
0
0
5px
#
D7D7DB
;
transition
:
box
-
shadow
150ms
;
}
.
actions
button
.
dismiss
{
border
:
0
;
padding
:
0
;
text
-
decoration
:
underline
;
}
.
actions
button
.
done
{
background
:
#
0060DF
;
border
:
solid
1px
#
0060DF
;
color
:
#
FFF
;
margin
-
inline
-
start
:
auto
;
}
.
outer
-
wrapper
{
display
:
flex
;
padding
:
40px
32px
32px
;
height
:
100
%
;
flex
-
grow
:
1
;
}
.
outer
-
wrapper
.
fixed
-
to
-
top
{
height
:
auto
;
}
main
{
margin
:
auto
;
width
:
224px
;
padding
-
bottom
:
120px
;
}
media
(
min
-
width
:
416px
)
{
main
{
width
:
352px
;
}
}
media
(
min
-
width
:
544px
)
{
main
{
width
:
480px
;
}
}
media
(
min
-
width
:
800px
)
{
main
{
width
:
736px
;
}
}
main
section
{
margin
-
bottom
:
40px
;
position
:
relative
;
}
.
section
-
title
{
font
-
size
:
13px
;
font
-
weight
:
bold
;
text
-
transform
:
uppercase
;
}
.
section
-
title
span
{
color
:
#
737373
;
fill
:
#
737373
;
vertical
-
align
:
middle
;
}
.
top
-
sites
-
list
{
list
-
style
:
none
;
margin
:
0
;
padding
:
0
;
margin
-
inline
-
end
:
-
32px
;
margin
-
bottom
:
-
18px
;
}
media
(
max
-
width
:
416px
)
{
.
top
-
sites
-
list
:
nth
-
child
(
2n
+
1
)
.
context
-
menu
{
margin
-
inline
-
start
:
auto
;
margin
-
inline
-
end
:
auto
;
offset
-
inline
-
start
:
-
32px
;
offset
-
inline
-
end
:
auto
;
}
.
top
-
sites
-
list
:
nth
-
child
(
2n
)
.
context
-
menu
{
margin
-
inline
-
start
:
auto
;
margin
-
inline
-
end
:
5px
;
offset
-
inline
-
start
:
auto
;
offset
-
inline
-
end
:
0
;
}
}
/* ... */

