Bug 1399970 - Add Photon polish, PureComponents and bug fixes to Activity Stream. r=dmose Also fix Bug 1399686 - `make package` broken on macOS after landing of bug 1399226
MozReview-Commit-ID: HVZ02HlV1b6

UltraBlame original commit: 3b514f20525296a9b6a623ba680fb027bc9e6cae

--- a/browser/extensions/activity-stream/data/content/activity-stream.css
+++ b/browser/extensions/activity-stream/data/content/activity-stream.css
@@ -430,13 +430,15 @@ image
 url
 (
 "
-assets
+chrome
+:
 /
-glyph
--
+/
+browser
+/
+skin
+/
 settings
--
-16
 .
 svg
 "
@@ -1264,7 +1266,7 @@ padding
 -
 bottom
 :
-120px
+48px
 ;
 }
 media
@@ -1396,6 +1398,13 @@ margin
 :
 0
 ;
+margin
+-
+bottom
+:
+-
+18px
+;
 padding
 :
 0
@@ -1408,13 +1417,6 @@ end
 :
 -
 32px
-;
-margin
--
-bottom
-:
--
-18px
 ;
 }
 media
@@ -1918,7 +1920,7 @@ margin
 :
 0
 0
-18px
+8px
 ;
 margin
 -
@@ -2872,6 +2874,28 @@ size
 :
 32px
 ;
+display
+:
+flex
+;
+align
+-
+items
+:
+center
+;
+justify
+-
+content
+:
+center
+;
+font
+-
+size
+:
+20px
+;
 }
 .
 top
@@ -3286,6 +3310,122 @@ edit
 menu
 button
 :
+first
+-
+child
+:
+dir
+(
+ltr
+)
+.
+top
+-
+sites
+-
+list
+.
+top
+-
+site
+-
+outer
+.
+edit
+-
+menu
+button
+:
+last
+-
+child
+:
+dir
+(
+rtl
+)
+{
+width
+:
+30px
+;
+}
+.
+top
+-
+sites
+-
+list
+.
+top
+-
+site
+-
+outer
+.
+edit
+-
+menu
+button
+:
+last
+-
+child
+:
+dir
+(
+ltr
+)
+.
+top
+-
+sites
+-
+list
+.
+top
+-
+site
+-
+outer
+.
+edit
+-
+menu
+button
+:
+first
+-
+child
+:
+dir
+(
+rtl
+)
+{
+width
+:
+28px
+;
+}
+.
+top
+-
+sites
+-
+list
+.
+top
+-
+site
+-
+outer
+.
+edit
+-
+menu
+button
+:
 last
 -
 child
@@ -3542,6 +3682,24 @@ calc
 %
 +
 62px
+)
+;
+box
+-
+shadow
+:
+0
+1px
+4px
+0
+rgba
+(
+12
+12
+13
+0
+.
+1
 )
 ;
 }
@@ -4312,6 +4470,13 @@ inline
 -
 block
 ;
+margin
+-
+bottom
+:
+-
+2px
+;
 }
 .
 sections
@@ -4521,7 +4686,7 @@ inline
 end
 :
 -
-1px
+13px
 ;
 offset
 -
@@ -4542,6 +4707,24 @@ width
 padding
 :
 24px
+;
+box
+-
+shadow
+:
+0
+1px
+4px
+0
+rgba
+(
+12
+12
+13
+0
+.
+1
+)
 ;
 -
 moz
@@ -5466,6 +5649,44 @@ rgba
 )
 ;
 border
+:
+1px
+solid
+rgba
+(
+0
+0
+0
+0
+.
+15
+)
+;
+box
+-
+shadow
+:
+0
+1px
+4px
+0
+rgba
+(
+12
+12
+13
+0
+.
+1
+)
+;
+border
+-
+radius
+:
+3px
+;
+border
 -
 radius
 :
@@ -5499,6 +5720,12 @@ width
 :
 100
 %
+;
+font
+-
+size
+:
+15px
 ;
 }
 .
@@ -5610,13 +5837,15 @@ background
 url
 (
 "
-assets
+chrome
+:
 /
-glyph
--
-search
--
-16
+/
+browser
+/
+skin
+/
+find
 .
 svg
 "
@@ -5624,10 +5853,10 @@ svg
 no
 -
 repeat
-center
+12px
 center
 /
-20px
+16px
 ;
 fill
 :
@@ -5638,7 +5867,7 @@ rgba
 13
 0
 .
-6
+4
 )
 ;
 -
@@ -5737,7 +5966,7 @@ rgba
 13
 0
 .
-6
+4
 )
 ;
 -
@@ -6147,6 +6376,41 @@ li
 a
 :
 hover
+.
+icon
+.
+context
+-
+menu
+>
+ul
+>
+li
+>
+a
+:
+focus
+.
+icon
+{
+fill
+:
+#
+FFF
+;
+}
+.
+context
+-
+menu
+>
+ul
+>
+li
+>
+a
+:
+hover
 :
 hover
 .
@@ -6212,7 +6476,7 @@ font
 -
 size
 :
-15px
+14px
 ;
 line
 -
@@ -6377,7 +6641,7 @@ font
 -
 size
 :
-24px
+21px
 ;
 margin
 :
@@ -6411,7 +6675,7 @@ D7D7DB
 ;
 margin
 :
-28px
+20px
 0
 ;
 }
@@ -6563,7 +6827,7 @@ font
 -
 size
 :
-17px
+16px
 ;
 font
 -
@@ -6683,7 +6947,7 @@ font
 -
 size
 :
-13px
+14px
 ;
 font
 -
@@ -8613,6 +8877,38 @@ outer
 .
 card
 -
+text
+:
+not
+(
+.
+no
+-
+description
+)
+.
+card
+-
+title
+{
+max
+-
+height
+:
+57px
+;
+overflow
+:
+hidden
+;
+}
+.
+card
+-
+outer
+.
+card
+-
 host
 -
 name
@@ -8726,9 +9022,9 @@ context
 {
 padding
 :
+12px
 16px
-16px
-8px
+12px
 14px
 ;
 position
